OO-3706: new settings and new bookable flag for resources
Rearrange the different settings in the same place with a segment view
for all resources. Implement a new flag for resources "bookable" which
indicates the entries with a booking methods. Guests users doesn't have
a right to view courses with booking methods.